# GSSI_LE-6_Exam

./: .gitignore  CMakeLists.txt  README.md
Codes/Exercise1/: Exercise1  Exercise1.cpp  SimpleGenerator.root  SimpleGenerator1.root
Codes/Exercise2/: Exercise2.1.cpp  Exercise2.cpp  Exercise2_1.cpp
Codes/Exercise3/: Exercise3.cpp
Codes/Exercise4/: Exercise4.cpp  Exercise4_1.cpp  Exercise4_2.cpp
Codes/Exercise5/: Exercise5_1.cpp  Exercise5_2.cpp  Exercise5_3.cpp
Codes/Exercise6/: Exercise6.cpp
Codes/Exercise7/: Exercise7.cpp
src/Exercise1/: Exercise1  Exercise1.cpp
src/Exercise2/: Exercise2  Exercise2.1.cpp  Exercise2.cpp  Exercise2_1
src/Exercise3/: Exercise3  Exercise3.cpp
src/Exercise4/: Exercise4_1  Exercise4_1.cpp  Exercise4_2  Exercise4_2.cpp
src/Exercise5/: Exercise5_1  Exercise5_1.cpp  Exercise5_2  Exercise5_2.cpp  Exercise5_3  Exercise5_3.cpp
src/Exercise6/: Exercise6  Exercise6.cpp
src/Exercise7/: Exercise7  Exercise7.cpp
src/Exercise8/: Exercise8_1  Exercise8_1.cpp  Exercise8_2  Exercise8_2.cpp
